# transition-manifolds

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
benchmarks/: bench_kernel_eval.py
src/transitionmanifolds/: __init__.py  transition_manifold.py
src/transitionmanifolds/distance_matrix/: __init__.py  distance_matrix.py  mmd.py
src/transitionmanifolds/embedding/: __init__.py  diffusion_maps.py  embedding.py
tests/: test_distance_matrix.py  test_embedding.py
